# bargain-finder

./: .gitignore  main.py  pyproject.toml
bargain-scraper/: pyproject.toml
