[project]
name = "bargain-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "clicksend-client>=5.0.78",
    "pyyaml>=6.0.2",
    "selenium>=4.31.0",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.40",
    "webdriver-manager>=4.0.2",
]
